creating  text file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
      </head>
      <body>
          <h1>hello everyone</h1>
-         <h2>learn how to connect vs code to github </h2>
+         <h2>learn how to connect vs code to github</h2>
+         <h3>this is H3</h3>
     
  </body>
  </html>    
